[project]
name = "mypackage"
description = "Template package"
authors = [
    "Endre Márk Borza"
]
license = "MIT"
readme = "README.md"
python = ">=3.7"
url = "https://github.com/endremborza/mypackage"
keywords="boilerplate"
[build-system]
requires = [
    "toml >= 0.10.0",
    "setuptools >= 38.6.0",
    "wheel >= 0.31.0",
    "setuptools_scm >= 2.0.0, <3"
]